2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaPixmapSave), (exaMoveInPixmap),
	(exaMoveOutPixmap):
	Improve the migration debugging output.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect):
	Fix a bug in the intersection computation that could concievably cause
	incorrect results to be returned (but would probably usually be
	over-conservative).

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_render.c: (exaGlyphsIntersect), (exaGlyphs):
	Bug #4668: Check if the lists of glyphs don't have any intersecting
	glyphs, and if they all have a maskFormat matching the format of the
	actual glyphs  If so, we can avoid the temporary pixmap for accumulating
	glyphs, which reduces the number of operations done, and makes it easier
	on the migration system.  This fixes some significant performance
	issues, particularly with subpixel antialiasing.  Note that it does
	increase the amount of damage computation which is done, so is not
	always a win with a compositing manager running.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_migration.c: (exaAssertNotDirty), (exaDoMigration):
	* exa/exa_priv.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (exaDDXDriverInit):
	Add an option to verify at the point of migration that pixmaps which
	aren't marked dirty are in fact not dirty.  This will hopefully help
	catch issues like the previous commit.  Leave it on in fakexa.

2006-04-25  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaPutImage):
	Don't forget to mark the drawable as dirty in exaPutImage().  Fixes
	corruption with drivers that have UTS.  (Michel Dänzer)

2006-04-23  Donnie Berkholz  <spyderous@gentoo.org>

	* Makefile.am:
	Remove another reference to cfb16.

2006-04-23  Donnie Berkholz  <spyderous@gentoo.org>

	* hw/xfree86/dummylib/Makefile.am:
	strlcpy() doesn't exist on Linux, so use the implementation in os/.

2006-04-23  Matthieu Herrb <matthieu.herrb@laas.fr>